platform/kubernetes/traefik/ingressroute-infrastructure.yaml
# IngressRoutes for infrastructure management UIs (UPS, PDU)
# These devices have web UIs that we want to access via Traefik with valid SSL certs
#
# Devices use HTTPS with self-signed certificates:
#   - ups1.wind.etherport.net -> 10.10.200.10:443
#   - ups2.wind.etherport.net -> 10.10.200.11:443
#   - pdu1.wind.etherport.net -> 10.10.200.15:80 (HTTP - HTTPS not working)
#   - pdu2.wind.etherport.net -> 10.10.200.16:80 (HTTP - HTTPS not working)
---
# UPS1 - CyberPower/APC UPS
apiVersion: v1
kind: Service
metadata:
  name: ups1-external
  namespace: traefik
spec:
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ups1-external
  namespace: traefik
subsets:
  - addresses:
      - ip: 10.10.200.10
    ports:
      - port: 443
        protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ups1
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ups1.wind.etherport.net`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
      services:
        - name: ups1-external
          port: 443
          serversTransport: insecure-transport
          scheme: https
  tls: {}
---
# UPS2
apiVersion: v1
kind: Service
metadata:
  name: ups2-external
  namespace: traefik
spec:
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ups2-external
  namespace: traefik
subsets:
  - addresses:
      - ip: 10.10.200.11
    ports:
      - port: 443
        protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ups2
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ups2.wind.etherport.net`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
      services:
        - name: ups2-external
          port: 443
          serversTransport: insecure-transport
          scheme: https
  tls: {}
---
# PDU1 - Uses HTTP (HTTPS not working on device)
apiVersion: v1
kind: Service
metadata:
  name: pdu1-external
  namespace: traefik
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pdu1-external
  namespace: traefik
subsets:
  - addresses:
      - ip: 10.10.200.15
    ports:
      - port: 80
        protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pdu1
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pdu1.wind.etherport.net`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
      services:
        - name: pdu1-external
          port: 80
  tls: {}
---
# PDU2 - Uses HTTP (HTTPS not working on device)
apiVersion: v1
kind: Service
metadata:
  name: pdu2-external
  namespace: traefik
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pdu2-external
  namespace: traefik
subsets:
  - addresses:
      - ip: 10.10.200.16
    ports:
      - port: 80
        protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pdu2
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pdu2.wind.etherport.net`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
      services:
        - name: pdu2-external
          port: 80
  tls: {}
---
# Proxmox IPMI/BMC
apiVersion: v1
kind: Service
metadata:
  name: prox-ipmi-external
  namespace: traefik
spec:
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: prox-ipmi-external
  namespace: traefik
subsets:
  - addresses:
      - ip: 10.10.200.21
    ports:
      - port: 443
        protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prox-ipmi
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prox-ipmi.wind.etherport.net`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
      services:
        - name: prox-ipmi-external
          port: 443
          serversTransport: insecure-transport
          scheme: https
  tls: {}
